--- a/index.html
+++ b/index.html
@@ -3,204 +3,93 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Book Haven - Seu Refugio Literario</title>
+  <title>Book Haven - Seu Refúgio Literário</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* Botão de menu para categorias */
-    .menu-categorias {
-      background-color: #00c853;
-      color: white;
-      border: none;
-      padding: 10px 16px;
-      border-radius: 6px;
-      font-size: 1rem;
-      cursor: pointer;
+    /* Esconde o botão categorias no desktop e mostra só no mobile */
+    #toggleCategorias {
       display: none;
-      margin: 10px auto;
-      width: fit-content;
-      box-shadow: 0 4px 10px rgba(0, 200, 83, 0.3);
     }
 
-    /* Categoria ativa (botão selecionado) */
-    .categoria-btn.ativa {
-      background-color: #333;
-      color: #fff;
-    }
-
-    @media (max-width: 600px) {
-      .menu-categorias {
-        display: block;
-      }
-
-      .categorias {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .categorias.ativo {
-        display: flex;
-      }
-
-      .categorias button {
-        width: 100%;
-        max-width: 300px;
-        margin: 6px auto;
-        text-align: center;
-      }
-    }
-
-    /* Fundo animado com vídeo no topo */
-    .hero {
-      position: relative;
-      height: 80vh; /* ocupa 80% da altura da tela */
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      text-align: center;
-      overflow: hidden;
-      font-family: 'Inter', Arial, sans-serif;
-    }
-
-    .hero video {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      filter: brightness(0.4);
-      z-index: -1;
-    }
-
-    .hero-text {
-      position: relative;
-      max-width: 900px;
-      padding: 20px;
-      z-index: 10;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
-    }
-
-    .hero p {
-      font-size: 1.5rem;
-      margin-bottom: 1.5rem;
-      text-shadow: 1px 1px 6px rgba(0,0,0,0.6);
-    }
-
-    .hero .cta {
-      padding: 14px 32px;
-      border-radius: 30px;
-      background: #00c853;
-      color: white;
-      font-weight: 700;
-      font-size: 1.2rem;
-      cursor: pointer;
-      text-decoration: none;
-      box-shadow: 0 6px 20px rgba(0, 200, 83, 0.6);
-      transition: background 0.3s ease;
-      display: inline-block;
-    }
-
-    .hero .cta:hover {
-      background: #009624;
-    }
-
-    /* Ajuste o header para ficar um pouco mais pra baixo e com z-index para estar acima do vídeo */
-    header.header {
-      position: relative;
-      z-index: 20;
-      background: transparent;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 20px;
-      font-family: 'Inter', Arial, sans-serif;
-    }
-
-    /* Logo dentro do header */
-    .header .logo {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-weight: 700;
-      font-size: 1.5rem;
-      color: #00c853;
-    }
-
-    .header .logo img {
-      height: 40px;
-      width: auto;
-    }
-
-    /* Input de busca */
-    .search-input {
-      padding: 8px 12px;
-      font-size: 1rem;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      max-width: 300px;
-      width: 100%;
-    }
-
-    /* Responsividade para o texto do hero */
     @media (max-width: 768px) {
-      .hero h1 {
-        font-size: 2rem;
+      #toggleCategorias {
+        display: block;
+        margin: 10px;
+        padding: 10px 15px;
+        font-size: 16px;
+        cursor: pointer;
       }
-      .hero p {
-        font-size: 1.1rem;
+
+      /* Esconde o menu de categorias inicialmente no mobile */
+      #categoriasMenu {
+        display: none;
+        margin: 10px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        background: #fff;
       }
-      .hero {
-        height: 60vh;
+
+      /* Quando o menu estiver aberto, vamos usar uma classe .open para exibir */
+      #categoriasMenu.open {
+        display: block;
       }
     }
   </style>
 </head>
 <body>
 
-  <header class="header">
+  <header class="header" id="header">
     <div class="logo">
       <img src="https://i.postimg.cc/yxZdWLYP/logo-transparente.png" alt="Logo Book Haven" />
       <span>Book Haven</span>
     </div>
-    <input
-      type="text"
-      id="searchInput"
-      class="search-input"
-      placeholder="O que você quer ler?"
-      onkeyup="buscar()" />
+    <input type="text" id="searchInput" class="search-input" placeholder="O que você quer ler?" />
   </header>
 
-  <section class="hero">
+  <section class="hero" id="heroSection">
     <video autoplay muted loop playsinline>
-  <source src="https://cdn.pixabay.com/video/2020/09/08/49375-459436752_large.mp4" type="video/mp4" />
-  Seu navegador não suporta vídeo.
-</video>
+      <source src="https://cdn.pixabay.com/video/2020/09/08/49375-459436752_large.mp4" type="video/mp4" />
+      Seu navegador não suporta vídeo.
+    </video>
     <div class="hero-text">
-      <h1>Seu Refúgio Literário 
-        <p>Encontre o livro perfeito para você</p>
-        </h1>
-      <a href="#catalogoView" class="cta">Ver Mais</a>
+      <h1>Seu Refúgio Literário</h1>
+      <p>Encontre o livro perfeito para você</p>
+      <a href="#catalogoView" class="btn-explore">Ver Mais</a>
     </div>
   </section>
 
-  <!-- Botão de menu visível apenas em dispositivos pequenos -->
-  <button id="toggleCategorias" class="menu-categorias">&#9776; Categorias</button>
+  <!-- Botão que só aparece no mobile para abrir/fechar categorias -->
+<button id="toggleCategorias" 
+        class="menu-categorias" 
+        aria-expanded="false" 
+        aria-controls="categoriasMenu" 
+        aria-label="Abrir menu de categorias">
+  &#9776; Categorias
+</button>
 
-  <nav class="categorias">
-    <button class="categoria-btn" data-categoria="todos" onclick="filtrar('todos')">Todos</button>
-    <button class="categoria-btn" data-categoria="desenvolvimento" onclick="filtrar('desenvolvimento')">Desenvolvimento Pessoal</button>
-    <button class="categoria-btn" data-categoria="romance" onclick="filtrar('romance')">Romance</button>
-    <button class="categoria-btn" data-categoria="ficcao" onclick="filtrar('ficcao')">Ficção Científica</button>
-    <button class="categoria-btn" data-categoria="drama" onclick="filtrar('drama')">Drama</button>
-    <button class="categoria-btn" data-categoria="suspense" onclick="filtrar('suspense')">Suspense</button>
-  </nav>
+<!-- Menu de categorias -->
+<nav class="categorias" id="categoriasMenu" aria-label="Categorias de livros">
+  <button class="categoria-btn ativa" data-categoria="todos" aria-pressed="true">Todos</button>
+  <button class="categoria-btn" data-categoria="desenvolvimento" aria-pressed="false">Desenvolvimento Pessoal</button>
+  <button class="categoria-btn" data-categoria="romance" aria-pressed="false">Romance</button>
+  <button class="categoria-btn" data-categoria="ficcao" aria-pressed="false">Ficção Científica</button>
+  <button class="categoria-btn" data-categoria="drama" aria-pressed="false">Drama</button>
+  <button class="categoria-btn" data-categoria="suspense" aria-pressed="false">Suspense</button>
+</nav>
+
+<!-- Script necessário para alternar visibilidade no mobile -->
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const toggleBtn = document.getElementById('toggleCategorias');
+    const menu = document.getElementById('categoriasMenu');
+
+    toggleBtn.addEventListener('click', function () {
+      const isExpanded = toggleBtn.getAttribute('aria-expanded') === 'true';
+      toggleBtn.setAttribute('aria-expanded', !isExpanded);
+      menu.style.display = isExpanded ? 'none' : 'flex';
+    });
+  });
+</script>
 
   <main>
     <section id="catalogoView">
@@ -208,28 +97,12 @@
       <div class="paginacao" id="paginacao"></div>
     </section>
 
-    <section id="detalhesView" class="detalhes-view" style="display: none;">
-      <button class="btn-voltar" onclick="voltarCatalogo()">← Voltar ao catálogo</button>
+    <section id="detalhesView" class="detalhes-view" hidden>
+      <button class="btn-voltar" aria-label="Voltar ao catálogo">← Voltar ao catálogo</button>
       <div id="detalhesProduto" class="detalhes-produto"></div>
     </section>
   </main>
 
-  <button id="topoBtn" class="topo-btn" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">
-    ↑
-  </button>
-
-  <script src="script.js"></script>
-  <script>
-    // Mostrar/ocultar categorias em telas pequenas
-    document.addEventListener('DOMContentLoaded', function () {
-      const toggleBtn = document.getElementById('toggleCategorias');
-      const categorias = document.querySelector('.categorias');
-
-      toggleBtn.addEventListener('click', () => {
-        categorias.classList.toggle('ativo');
-      });
-    });
-  </script>
-
 </body>
 </html>
+
