--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Book Haven - Seu Refúgio Literário!</title>
-    <link rel="icon" href="https://i.postimg.cc/6q936Fz4/Whats-App-Image-2025-05-09-at-21-57-26-1.png" type="image/png" />
+    <link rel="icon" href="https://i.imgur.com/s8z9dd3.png" />
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
