--- a/index.html
+++ b/index.html
@@ -69,3 +69,21 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<!-- Botão flutuante -->
+<button id="botaoFlutuante" title="Abrir menu">💬</button>
+
+<!-- Menu expansível com imagem cheia -->
+<div id="menuExpansivel">
+  <div class="menu-com-imagem">
+    <!-- Botão X para fechar -->
+    <button id="btnFecharMenu" class="close-btn-menu">×</button>
+
+    <!-- Imagem promocional -->
+    <img src="https://i.postimg.cc/NMxQ6MX8/Whats-App-Image-2025-07-20-at-16-51-11.jpg" alt="Promoção" class="promo-full-img">
+
+    <!-- Botão sobreposto -->
+    <a href="https://bookhaven.bestt.com.br/Funil/" target="_blank" class="btnFalarAgora">Saiba Mais</a>
+  </div>
+</div>
+
