--- a/index.html
+++ b/index.html
@@ -65,12 +65,7 @@
         <div id="detalhesProduto" class="detalhes-produto"></div>
     </section>
 
-    <!-- Script do seu JavaScript -->
-    <script src="script.js"></script>
-</body>
-</html>
-
-<!-- Botão flutuante -->
+    <<!-- Botão flutuante -->
 <button id="botaoFlutuante" title="Abrir menu">💬</button>
 
 <!-- Menu expansível com imagem cheia -->
@@ -85,8 +80,9 @@
     <!-- Botão sobreposto -->
     <a href="https://bookhaven.bestt.com.br/Funil/" target="_blank" class="btnFalarAgora">Saiba Mais</a>
   </div>
-</div>
+</div> 
+ !-- Script do seu JavaScript -->
+    <script src="script.js"></script>
+</body>
+</html>
 
-<script src="script.js" defer></script>
-
-<link rel="stylesheet" href="style.css" />
