--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
         <div id="detalhesProduto" class="detalhes-produto"></div>
     </section>
 
-    <<!-- Botão flutuante -->
-<button id="botaoFlutuante" title="Abrir menu">💬</button>
+    <!-- Botão flutuante -->
+  <button id="botaoFlutuante" title="Abrir menu">💬</button>
 
-<!-- Menu expansível com imagem cheia -->
-<div id="menuExpansivel">
-  <div class="menu-com-imagem">
-    <!-- Botão X para fechar -->
-    <button id="btnFecharMenu" class="close-btn-menu">×</button>
+  <!-- Menu expansível com imagem e botão -->
+  <div id="menuExpansivel">
+    <div class="menu-com-imagem">
+      <!-- Botão X para fechar -->
+      <button id="btnFecharMenu" class="close-btn-menu" aria-label="Fechar menu">×</button>
 
-    <!-- Imagem promocional -->
-    <img src="https://i.postimg.cc/NMxQ6MX8/Whats-App-Image-2025-07-20-at-16-51-11.jpg" alt="Promoção" class="promo-full-img">
+      <!-- Imagem promocional -->
+      <img src="https://i.postimg.cc/NMxQ6MX8/Whats-App-Image-2025-07-20-at-16-51-11.jpg" alt="Promoção" class="promo-full-img" />
 
-    <!-- Botão sobreposto -->
-    <a href="https://bookhaven.bestt.com.br/Funil/" target="_blank" class="btnFalarAgora">Saiba Mais</a>
+      <!-- Botão sobreposto -->
+      <a href="https://bookhaven.bestt.com.br/Funil/" target="_blank" rel="noopener noreferrer" class="btnFalarAgora">Saiba Mais</a>
+    </div>
   </div>
-</div> 
- !-- Script do seu JavaScript -->
-    <script src="script.js"></script>
+
+  <script src="script.js"></script>
 </body>
 </html>
 
