--- a/index.html
+++ b/index.html
@@ -39,19 +39,17 @@
 
     <!-- Menu de categorias -->
     <nav class="categorias" id="categoriasMenu" aria-label="Categorias de livros">
-    <button class="categoria-btn ativa" data-categoria="todos" aria-pressed="true">Todos</button>
-    <button class="categoria-btn" data-categoria="desenvolvimento" aria-pressed="false">Desenvolvimento Pessoal</button>
-    <button class="categoria-btn" data-categoria="romance" aria-pressed="false">Romance</button>
-    <button class="categoria-btn" data-categoria="ficcao" aria-pressed="false">Ficção Científica</button>
-    <button class="categoria-btn" data-categoria="drama" aria-pressed="false">Drama</button>
-    <button class="categoria-btn" data-categoria="suspense" aria-pressed="false">Suspense</button>
-    
-    <!-- Novas categorias -->
-    <button class="categoria-btn" data-categoria="fantasia" aria-pressed="false">Fantasia</button>
-    <button class="categoria-btn" data-categoria="terror" aria-pressed="false">Terror</button>
-    <button class="categoria-btn" data-categoria="técnico " aria-pressed="false">Aventura</button>
-</nav>
-
+        <button class="categoria-btn ativa" data-categoria="todos" aria-pressed="true">Todos</button>
+        <button class="categoria-btn" data-categoria="desenvolvimento" aria-pressed="false">Desenvolvimento Pessoal</button>
+        <button class="categoria-btn" data-categoria="romance" aria-pressed="false">Romance</button>
+        <button class="categoria-btn" data-categoria="ficcao" aria-pressed="false">Ficção Científica</button>
+        <button class="categoria-btn" data-categoria="drama" aria-pressed="false">Drama</button>
+        <button class="categoria-btn" data-categoria="suspense" aria-pressed="false">Suspense</button>
+        <!-- Novas categorias -->
+        <button class="categoria-btn" data-categoria="fantasia" aria-pressed="false">Fantasia</button>
+        <button class="categoria-btn" data-categoria="terror" aria-pressed="false">Terror</button>
+        <button class="categoria-btn" data-categoria="aventura" aria-pressed="false">Aventura</button>
+    </nav>
 
     <!-- Seção do Catálogo -->
     <section id="catalogoView" class="catalogo-section">
@@ -66,23 +64,24 @@
     </section>
 
     <!-- Botão flutuante -->
-  <button id="botaoFlutuante" title="Abrir menu">💬</button>
+    <button id="botaoFlutuante" title="Abrir menu">💬</button>
 
-  <!-- Menu expansível com imagem e botão -->
-  <div id="menuExpansivel">
-    <div class="menu-com-imagem">
-      <!-- Botão X para fechar -->
-      <button id="btnFecharMenu" class="close-btn-menu" aria-label="Fechar menu">×</button>
+    <!-- Menu expansível com imagem e botão -->
+    <div id="menuExpansivel">
+        <div class="menu-com-imagem">
+            <!-- Botão X para fechar -->
+            <button id="btnFecharMenu" class="close-btn-menu" aria-label="Fechar menu">×</button>
 
-      <!-- Imagem promocional -->
-      <img src="https://i.postimg.cc/NMxQ6MX8/Whats-App-Image-2025-07-20-at-16-51-11.jpg" alt="Promoção" class="promo-full-img" />
+            <!-- Imagem promocional -->
+            <img src="https://i.postimg.cc/NMxQ6MX8/Whats-App-Image-2025-07-20-at-16-51-11.jpg" alt="Promoção" class="promo-full-img" />
 
-      <!-- Botão sobreposto -->
-      <a href="https://bookhaven.bestt.com.br/Funil/" target="_blank" rel="noopener noreferrer" class="btnFalarAgora">Saiba Mais</a>
+            <!-- Botão sobreposto -->
+            <a href="https://bookhaven.bestt.com.br/Funil/" target="_blank" rel="noopener noreferrer" class="btnFalarAgora">Saiba Mais</a>
+        </div>
     </div>
-  </div>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
+
 
