--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
 
             <!-- Botão sobreposto -->
             <a href="https://bookhaven.bestt.com.br/Funil/" target="_blank" rel="noopener noreferrer" class="btnFalarAgora">Saiba Mais</a>
+
+            <!-- Mensagem de aviso -->
+<div id="mensagemAviso" class="mensagem-aviso">
+  Clique no botão 💬 para liberar o acesso dos livros!
+</div>
         </div>
     </div>
 
