--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
     <!-- Mensagem de aviso -->
 <div id="mensagemAviso" class="mensagem-aviso">
-  Clique no botão 💬 para liberar o acesso dos livros!
+Clique no botão 💬 <br> para liberar o acesso dos livros!
+
 </div>
 
 <!-- Botão flutuante -->
