--- a/index.html
+++ b/index.html
@@ -542,7 +542,8 @@
     </div>
 
   <!-- CSS -->
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style/style.css">
+
 
 <!-- JS -->
 <script src="script.js"></script>
